# pypp11

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  env.bashrc  modules.bashrc  requirements.txt  setup.py
include/: mec-geolocation.hpp  mec-module2.hpp  mec-module3.hpp
simulation/: README.md  create_new_session.sh  scheduler_template.sh
simulation/plotting/: README.md  config.py  mod_plots.py  tools.py
simulation/plotting/plotters/: plotter_1.py  plotter_base.py
src/: CMakeLists.txt
src/pypp11/: CMakeLists.txt  __init__.py
src/pypp11.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pypp11/common/: CMakeLists.txt  __init__.py
src/pypp11/common/algo/simple_algo/: __init__.py  simple_algo.py
src/pypp11/common/mec/: CMakeLists.txt  __init__.py
src/pypp11/common/mec/chunk_process/: __init__.py  chunk_process.py
src/pypp11/common/mec/clp/: __init__.py  clp.py
src/pypp11/common/mec/converter/: converter.py
src/pypp11/common/mec/file_copy/: __init__.py  file_copy.py
src/pypp11/common/mec/math/: math.py
src/pypp11/common/mec/mec_module1/: CMakeLists.txt  __init__.py  expose-mec-module1.cpp  mec-module1.cpp  mec_module1.py
src/pypp11/common/mec/mec_module2/: CMakeLists.txt  __init__.py  expose-mec-module2.cpp  mec-module2.cpp  mec_module2.py
src/pypp11/common/mec/mec_module3/: CMakeLists.txt  __init__.py  expose-mec-module3.cpp  mec-module3.cpp  mec_module3.py  test.py
src/pypp11/common/mec/pypp11_logger/: __init__.py  pypp11_logger.py
src/pypp11/common/mec/sorting/: sorting.py
src/pypp11/common/mec/tictoc/: __init__.py  tictoc.py
src/pypp11/modules/: __init__.py
src/pypp11/modules/module_base/: __init__.py  module_base.py
src/pypp11/modules/module_base/algo_base/: __init__.py  algo_base.py
src/pypp11/modules/simple_module/: __init__.py  simple_module.py
src/pypp11/modules/simple_module/algo/: __init__.py  simple_algo.py
src/pypp11/modules/simple_module/step/: __init__.py  simple_module_step.py
tests/: CMakeLists.txt  test_cpp.py
tests/cpp/: CMakeLists.txt  test_mec-module1.cpp  test_mec-module2.cpp
tests/python/common/mec/mec_module1/: mec_module1_test.py
tests/python/common/mec/mec_module2/: mec_module2_test.py
tests/python/common/mec/seeps_sorting/: seeps_sorting_test.py
tests/python/modules/simple_module/: simple_module.py
